--- a/projects/fantatic/index.html
+++ b/projects/fantatic/index.html
@@ -102,7 +102,7 @@
                 <ul class="t-smallMenuCard t-CompanyMenuHeader">
                   <li><a href="#">О нас</a></li>
                   <li><a href="#">Контакты</a></li>
-                  <li><a href="#">Обратная связь</a></li>
+                  <li><a href="/feedback.html">Обратная связь</a></li>
                 </ul></span></li>
             <li class="t-openSerachBar">
               <svg width="13" height="13" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -531,7 +531,7 @@
             <ul class="t-footerMenuList">
               <li><a href="#">О нас</a></li>
               <li><a href="#">Контакты</a></li>
-              <li><a href="#">Обратная связь</a></li>
+              <li><a href="/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
           <div class="t-footerCompany mainWidth"><span class="t-footerSectionTitle">Мы в социальных сетях</span>
