--- a/projects/fantatic/catalog.html
+++ b/projects/fantatic/catalog.html
@@ -102,7 +102,7 @@
                 <ul class="t-smallMenuCard t-CompanyMenuHeader">
                   <li><a href="#">О нас</a></li>
                   <li><a href="#">Контакты</a></li>
-                  <li><a href="#">Обратная связь</a></li>
+                  <li><a href="/feedback.html">Обратная связь</a></li>
                 </ul></span></li>
             <li class="t-openSerachBar">
               <svg width="13" height="13" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -648,7 +648,7 @@
                 </div>
                 <div class="t-catalogRightContainerBody">
                   <div class="t-barndAll">
-                    <ul class="t-brandsSection t-filterMainList">
+                    <ul class="t-brandsSection t-filterMainList t-checkBoxesCtrl">
                       <li>
                         <input type="checkbox" id="allBrands" class="t-hideSomething">
                         <label for="allBrands" class="t-checkControl">Все бренды</label>
@@ -759,7 +759,7 @@
             <ul class="t-footerMenuList">
               <li><a href="#">О нас</a></li>
               <li><a href="#">Контакты</a></li>
-              <li><a href="#">Обратная связь</a></li>
+              <li><a href="/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
           <div class="t-footerCompany mainWidth"><span class="t-footerSectionTitle">Мы в социальных сетях</span>
