--- a/projects/fantatic/index.html
+++ b/projects/fantatic/index.html
@@ -85,25 +85,27 @@
               <li><a href="/catalog.html" class="t-menuListLink">Сувениры</a></li>
             </ul>
           </nav>
-        </div>
-        <div class="brand-logo"><a href="/"><img src="/images/logo.png" class="t-firstLogo"><img src="/images/stickyLogo.svg" class="t-secondLogo"></a></div>
-        <div class="t-navigation">
-          <ul>
-            <li class="t-buyerMenuList"><span>Покупателю
+          <div class="buyerAndCompanyWrapper">
+            <div class="t-buyerMenuList"><span>Покупателю
                 <ul class="t-smallMenuCard t-buyerMenuHeader">
                   <li><a href="#">Доставка</a></li>
                   <li><a href="#">Оплата</a></li>
                   <li><a href="/guarantee.html">Гарантия</a></li>
                   <li><a href="#">Обмен, возврат и ремонт</a></li>
-                  <li><a href="#">Вопросы и ответы</a></li>
+                  <li><a href="/questions.html">Вопросы и ответы</a></li>
                   <li><a href="#">Условия и правила сайта</a></li>
-                </ul></span></li>
-            <li class="t-CompanyMenuList"><span>Компания
+                </ul></span></div>
+            <div class="t-CompanyMenuList"><span>Компания
                 <ul class="t-smallMenuCard t-CompanyMenuHeader">
                   <li><a href="#">О нас</a></li>
-                  <li><a href="#">Контакты</a></li>
+                  <li><a href="/contacts.html">Контакты</a></li>
                   <li><a href="/feedback.html">Обратная связь</a></li>
-                </ul></span></li>
+                </ul></span></div>
+          </div>
+        </div>
+        <div class="brand-logo"><a href="/"><img src="/images/logo.png" class="t-firstLogo"><img src="/images/stickyLogo.svg" class="t-secondLogo"></a></div>
+        <div class="t-navigation">
+          <ul>
             <li class="t-openSerachBar">
               <svg width="13" height="13" viewBox="0 0 13 13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <path id="path0_fill" fill-rule="evenodd" d="M 6.83728 2.05423C 4.56813 2.05423 2.72879 3.89364 2.72879 6.16268C 2.72879 7.29315 3.18543 8.31698 3.92417 9.05983C 3.92693 9.06252 3.92944 9.06505 3.9322 9.06777C 3.93496 9.07049 3.93746 9.07304 3.94022 9.07577C 4.68298 9.81457 5.70684 10.2711 6.83728 10.2711C 9.10642 10.2711 10.9458 8.43171 10.9458 6.16268C 10.9458 3.89364 9.10642 2.05423 6.83728 2.05423ZM 3.26642 11.186C 4.27374 11.9034 5.50623 12.3254 6.83728 12.3254C 10.2409 12.3254 13 9.56623 13 6.16268C 13 2.75912 10.2409 0 6.83728 0C 3.43368 0 0.67455 2.75912 0.67455 6.16268C 0.67455 7.49369 1.09658 8.72615 1.81401 9.73359L 0.300914 11.2466C -0.100305 11.6477 -0.100305 12.2981 0.300914 12.6992C 0.701883 13.1003 1.35236 13.1003 1.75333 12.6992L 3.26642 11.186ZM 6.83728 7.70334C 7.68811 7.70334 8.37796 7.01356 8.37796 6.16267C 8.37796 5.87904 8.6079 5.64912 8.89152 5.64912C 9.17513 5.64912 9.40508 5.87904 9.40508 6.16267C 9.40508 7.58082 8.25533 8.73046 6.83728 8.73046C 5.41922 8.73046 4.26947 7.58082 4.26947 6.16267C 4.26947 5.87904 4.49942 5.64912 4.78303 5.64912C 5.06664 5.64912 5.29659 5.87904 5.29659 6.16267C 5.29659 7.01356 5.98644 7.70334 6.83728 7.70334Z"></path>
@@ -507,7 +509,7 @@
       </main>
       <footer id="footer">
         <div class="t-moonGradient"></div>
-        <div data-controlls id="t-moon" class="t-moon"></div>
+        <div id="t-moon" class="t-moon t-moonMove"></div>
         <div class="t-footerMain">
           <div class="t-footerBuyer mainWidth"><span class="t-footerSectionTitle">Покупателю</span>
             <ul class="t-footerMenuList">
@@ -515,7 +517,7 @@
               <li><a href="#">Оплата</a></li>
               <li><a href="/guarantee.html">Гарантия</a></li>
               <li><a href="#">Обмен, возврат и ремонт</a></li>
-              <li><a href="#">Вопросы и ответы</a></li>
+              <li><a href="/questions.html">Вопросы и ответы</a></li>
               <li><a href="#">Условия и правила сайта</a></li>
             </ul>
           </div>
@@ -530,7 +532,7 @@
           <div class="t-footerCompany mainWidth"><span class="t-footerSectionTitle">Компания</span>
             <ul class="t-footerMenuList">
               <li><a href="#">О нас</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="/contacts.html">Контакты</a></li>
               <li><a href="/feedback.html">Обратная связь</a></li>
             </ul>
           </div>
