--- a/projects/fantatic/contacts.html
+++ b/projects/fantatic/contacts.html
@@ -142,162 +142,30 @@
         </div>
       </header>
       <main>
-        <section class="t-mainContainerSection">
-          <h2 class="t-sectionTitle"> Корзина</h2>
-          <div class="t-breadCrumbs">
-            <ul>
-              <li><a href="/">Главная</a></li>
-              <li><span>Корзина</span></li>
-            </ul>
-          </div>
-          <div class="t-standartMainContainer t-orderCardFormWrapper">
-            <div class="t-orderCardFormHeader">
-              <h3 class="t-orderCardFormTitle t-midTitleMain">Данные для оформления</h3>
+        <section class="t-contactsSection t-mainContainerSection">
+          <h2 class="t-sectionTitle"> Контакты</h2>
+          <div class="t-contactsContainer">
+            <div class="t-contactEmailWrapper t-contactsStyleControl">
+              <h3 class="t-contactEmail">mail@fantatic.ru</h3>
+              <p class="t-contactSectionTitle">Корпоративная почта</p>
             </div>
-            <div class="t-orderCardFormBody">
-              <form class="t-orderForm">
-                <div class="t-inputsHolderSections t-orderInputHolder">
-                  <label for="yourName" class="t-inputMainTitle t-orderLabelCtrl">Ваше имя</label>
-                  <input type="text" id="yourName" placeholder="Володя" class="t-mainInput t-orderFormBlack">
-                </div>
-                <div class="t-inputsHolderSections t-orderInputHolder">
-                  <label for="contactNumber" class="t-inputMainTitle t-orderLabelCtrl">Контактный телефон</label>
-                  <input type="tel" id="contactNumber" placeholder="Чтобы мы знали как к вам обращаться" class="t-mainInput t-orderFormBlack">
-                </div>
-                <div class="t-inputsHolderSections t-orderInputHolder">
-                  <label for="yourEmail" class="t-inputMainTitle t-orderLabelCtrl">Электронная почта</label>
-                  <input type="email" id="yourEmail" placeholder="Ваш Email" class="t-mainInput t-orderFormBlack">
-                </div>
-                <div class="t-inputsHolderSections t-orderInputHolder">
-                  <label for="deliveryAddress" class="t-inputMainTitle t-orderLabelCtrl">Адрес доставки</label>
-                  <input type="text" id="deliveryAddress" placeholder="В том числе и номер квартиры" class="t-mainInput t-orderFormBlack">
-                </div>
-                <div class="t-inputsHolderSections t-orderInputHolder">
-                  <label for="orderComment" class="t-inputMainTitle t-orderLabelCtrl">Комментарий к заказу</label>
-                  <input type="text" id="orderComment" placeholder="Необязательно" class="t-mainInput t-orderFormBlack">
-                </div>
-              </form>
+            <div class="t-contactAddressWrapper t-contactsStyleControl">
+              <h3 class="t-contactAddress">Улица Ленина, 100, офис 1</h3>
+              <p class="t-contactSectionTitle">Головной офис в Москве</p>
             </div>
-            <div class="t-orderCardFormFooter">
-              <div class="t-cartInfoMain">
-                <p class="t-cartCounterMain">Товаров -<span class="t-cartCounterMainCount">12</span></p><span class="t-cartTotalPriceMain t-midTitleMain">357 500 ₽</span>
-              </div>
-              <div class="t-cartBtnsMain">
-                <div class="t-checkboxHolder t-checkBoxesCtrl">
-                  <input type="checkbox" id="agree" class="t-checkbox t-hideSomething">
-                  <label for="agree" class="t-checkControl">Согласен на обработку данных</label>
-                </div>
-                <div class="t-orderBtnsHolder">
-                  <button class="t-btn t-sendOrder"><span>Отправить заявку</span></button><a href="/catalog.html" class="t-secondBtn">Добавить товары из каталога</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="t-standartMainContainer t-cartGoodsListWrapper">
-            <div class="t-cartGoodsListHeader">
-              <h3 class="t-cartGoodsListTitle t-midTitleMain">Список товаров</h3>
-            </div>
-            <div class="t-cartGoodsListBodyOutput">
-              <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
-                  <div class="t-quantityItemCtrl">
-                    <button class="t-quantityBtn t-quantityDown"></button>
-                    <input value="10" class="t-quantityInput"/>
-                    <button class="t-quantityBtn t-quantityUp"></button>
-                  </div>
-                </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
-              </div>
-              <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
-                  <div class="t-quantityItemCtrl">
-                    <button class="t-quantityBtn t-quantityDown"></button>
-                    <input value="10" class="t-quantityInput"/>
-                    <button class="t-quantityBtn t-quantityUp"></button>
-                  </div>
-                </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
-              </div>
-              <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
-                  <div class="t-quantityItemCtrl">
-                    <button class="t-quantityBtn t-quantityDown"></button>
-                    <input value="10" class="t-quantityInput"/>
-                    <button class="t-quantityBtn t-quantityUp"></button>
-                  </div>
-                </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
-              </div>
-              <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
-                  <div class="t-quantityItemCtrl">
-                    <button class="t-quantityBtn t-quantityDown"></button>
-                    <input value="10" class="t-quantityInput"/>
-                    <button class="t-quantityBtn t-quantityUp"></button>
-                  </div>
-                </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
-              </div>
-              <div class="t-cartGoodsCard">
-                <div class="t-cardInsideBlock"><img src="/images/goodimage.png" class="t-cartItemImage"/><span class="t-cartItemName">Neca Prometheus Series 1 Deluxe Pressure Suit Engineer</span></div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-cartItemPrice">32 500<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock">
-                  <div class="t-quantityItemCtrl">
-                    <button class="t-quantityBtn t-quantityDown"></button>
-                    <input value="10" class="t-quantityInput"/>
-                    <button class="t-quantityBtn t-quantityUp"></button>
-                  </div>
-                </div>
-                <div class="t-cardInsideBlock"><span class="t-bold t-itemTotalPrice">325 000<span class="t-bold t-rubSign">₽</span></span></div>
-                <div class="t-cardInsideBlock"><span class="t-removeFromCartBtn t-smallCloseBtn"></span></div>
-              </div>
+            <div class="t-contactSocialWrapper t-contactsStyleControl">
+              <ul>
+                <li><a href="#"><img src="/images/icons/social/fb.svg"></a></li>
+                <li><a href="#"><img src="/images/icons/social/vk.svg"></a></li>
+                <li><a href="#"><img src="/images/icons/social/instagram.svg"></a></li>
+                <li><a href="#"><img src="/images/icons/social/twitter.svg"></a></li>
+                <li><a href="#"><img src="/images/icons/social/tube.svg"></a></li>
+              </ul>
+              <p class="t-contactSectionTitle">Группы в социальных сетях</p>
             </div>
           </div>
         </section>
-        <section class="t-bottomInfo">
-          <div class="t-bottomInfoCardsHolder">
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/wallet.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Оплата</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов оплаты, в том числе и оплата электронными деньгами</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/rocket.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Доставка</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов доставки на ваш выбор или самомвывоз</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/guarantee.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Гарантия</h3>
-                <p class="t-bottomInfoCardDescription">Несколько вариантов оплаты, в том числе и оплата электронными деньгами</p>
-              </div>
-            </div>
-            <div class="t-bottomInfoCard">
-              <div class="t-bottomInfoCardImage"><img src="/images/bottominfo/tools.png"/></div>
-              <div class="t-bottomInfoCardInfo">
-                <h3 class="t-bottomInfoCardTitle">Ремонт</h3>
-                <p class="t-bottomInfoCardDescription">Проверим устройство на неисправность и отремонтируем</p>
-              </div>
-            </div>
-          </div>
-        </section>
+        <section class="t-bottomInfo"></section>
       </main>
       <footer id="footer">
         <div class="t-moonGradient"></div>
