--- a/projects/fantatic/_footer.html
+++ b/projects/fantatic/_footer.html
@@ -1,14 +1,15 @@
 
-<footer>
-  <div class="t-moon"></div>
+<footer id="footer">
+  <div class="t-moonGradient"></div>
+  <div id="t-moon" class="t-moon t-moonMove"></div>
   <div class="t-footerMain">
     <div class="t-footerBuyer mainWidth"><span class="t-footerSectionTitle">Покупателю</span>
       <ul class="t-footerMenuList">
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Оплата</a></li>
-        <li><a href="#">Гарантия</a></li>
+        <li><a href="/guarantee.html">Гарантия</a></li>
         <li><a href="#">Обмен, возврат и ремонт</a></li>
-        <li><a href="#">Вопросы и ответы</a></li>
+        <li><a href="/questions.html">Вопросы и ответы</a></li>
         <li><a href="#">Условия и правила сайта</a></li>
       </ul>
     </div>
@@ -23,8 +24,8 @@
     <div class="t-footerCompany mainWidth"><span class="t-footerSectionTitle">Компания</span>
       <ul class="t-footerMenuList">
         <li><a href="#">О нас</a></li>
-        <li><a href="#">Контакты</a></li>
-        <li><a href="#">Обратная связь</a></li>
+        <li><a href="/contacts.html">Контакты</a></li>
+        <li><a href="/feedback.html">Обратная связь</a></li>
       </ul>
     </div>
     <div class="t-footerCompany mainWidth"><span class="t-footerSectionTitle">Мы в социальных сетях</span>
@@ -39,7 +40,7 @@
     <div class="t-footerKnowAbout mainWidth"><span class="t-footerSectionTitle">Будь в курсе новостей</span>
       <div class="t-footerKnowAboutFieldWrap">
         <input type="email" required="required" placeholder="Ваш e-mail" class="t-footerKnowAboutField"/>
-        <button type="button" class="t-btn">Подписаться</button>
+        <button type="button" class="t-btn"><span>Подписаться</span></button>
       </div>
     </div>
   </div>
